[project]
name = "myboun-panel-chat"
version = "0.1.0"
description = "Application de chat WebSocket avec Panel"
authors = [{name = "Vinh", email = "vinh@example.com"}]
requires-python = ">=3.10"

[project.dependencies]
panel = ">=1.2.0"
websockets = ">=11.0.0"
httpx = ">=0.24.0"
param = ">=2.0.0"
asyncio = ">=3.4.3"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.10"
